--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <li><span class="intro__span-accent">Аэропортов</span> 241</li>
                     </ul>
             </section>
-            <section class="photo-grid">
+            <section class="photo-grid" aria-label="Заголовок">
                 <figure class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt="1 картинка"
                         class="photo-grid__image image"></figure>
                 <figure class="photo-grid__item"><img src="./images/photo-grid-atharva-tulsi.jpg" alt="2 картинка"
@@ -65,7 +65,7 @@
                 <figure class="photo-grid__item"><img src="./images/photo-grid-ergaki.jpg" alt="12 картинка"
                         class="photo-grid__image image"></figure>
             </section>
-            <section class="places">
+            <section class="places" aria-label="Заголовок">
                 <article class="place">
                     <h2 class="place__title root">Куршская коса</h2>
                     <img class="place__image image" src="./images/place-kosa.jpg" alt="Куршская коса">
