--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                         <h4 class="place__url-heading root">URL</h4>
                         <a class="place__link root link" href="http://park-kosa.ru">park-kosa.ru</a>
                     </div>
-                    <div class="place__paragraph">
-                        <p class="place__paragraph_number_first root">Здесь, посреди лесов и песчаных дюн, вы сможете
+                    <div class="place__description">
+                        <p class="place__paragraph root">Здесь, посреди лесов и песчаных дюн, вы сможете
                             увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого
                             рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
                         </p>
-                        <p class="place__paragraph_number_second root">На этом Калининградская область не заканчивается. Для
+                        <p class="place__paragraph root">На этом Калининградская область не заканчивается. Для
                             путешественника и исследователя там же по соседству — самая западная точка России,
                             Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера
                             здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного
@@ -92,11 +92,11 @@
                         <h4 class="place__url-heading root">URL</h4>
                         <a class="place__link root link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
                     </div>
-                    <div class="place__paragraph">
-                        <p class="place__paragraph_number_first root">Почти весь полуостров находится за Полярным кругом.
+                    <div class="place__description">
+                        <p class="place__paragraph root">Почти весь полуостров находится за Полярным кругом.
                             Саамская тундра, от которой на юг —
                             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                        <p class="place__paragraph_number_second root">Возможно, вы смотрели Звягинцева и даже слышали
+                        <p class="place__paragraph root">Возможно, вы смотрели Звягинцева и даже слышали
                             историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом
                             школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей
                             земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта
@@ -111,12 +111,12 @@
                         <h4 class="place__url-heading root">URL</h4>
                         <a class="place__link root link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
                     </div>
-                    <div class="place__paragraph">
-                        <p class="place__paragraph_number_first root">Алтай — одно из красивейших мест в России.
+                    <div class="place__description">
+                        <p class="place__paragraph root">Алтай — одно из красивейших мест в России.
                             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
                             горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
                             чудом здешних мест — горным воздухом.</p>
-                        <p class="place__paragraph_number_second root">Климат на Алтае умеренный, поэтому ехать сюда лучше
+                        <p class="place__paragraph root">Климат на Алтае умеренный, поэтому ехать сюда лучше
                             всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят
                             лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже
                             обитатели Алтайского края.</p>
@@ -129,11 +129,11 @@
                         <h4 class="place__url-heading root">URL</h4>
                         <a class="place__link root link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
                     </div>
-                    <div class="place__paragraph">
-                        <p class="place__paragraph_number_first root">Всем известен Байкал как крупнейшее озеро
+                    <div class="place__description">
+                        <p class="place__paragraph root">Всем известен Байкал как крупнейшее озеро
                             в мире. Многие также знают, что это самый большой источник пресной воды и одно из
                             красивейших мест в России.</p>
-                        <p class="place__paragraph_number_second root">Конечно, это всё так. Но Байкал ещё идеальное место
+                        <p class="place__paragraph root">Конечно, это всё так. Но Байкал ещё идеальное место
                             для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя
                             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019
                             года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
@@ -146,8 +146,8 @@
                         <h4 class="place__url-heading root">URL</h4>
                         <a class="place__link root link" href="http://vodlozero.ru/">http://vodlozero.ru/</a>
                     </div>
-                    <div class="place__paragraph">
-                        <p class="place__paragraph_number_first root">Сибирь заканчивается не на Урале, а в Карелии:
+                    <div class="place__description">
+                        <p class="place__paragraph root">Сибирь заканчивается не на Урале, а в Карелии:
                             образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она
                             вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот
                             никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к
