блок cover сделан сеткой

--- a/index.html
+++ b/index.html
@@ -342,14 +342,12 @@
             class="cover__background image"
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
           >
-            <div class="cover__grid-container">
-              <h2 class="cover__title root">До Байкала «на&nbsp;собаках»</h2>
-              <p class="cover__subtitle root">
-                По&nbsp;мотивам учебной темы о&nbsp;Транссибе
-                &mdash;&nbsp;путешествие от&nbsp;столицы&nbsp;до&nbsp;Байкала
-                на&nbsp;электричках.
-              </p>
-            </div>
+            <h2 class="cover__title root">До Байкала «на&nbsp;собаках»</h2>
+            <p class="cover__subtitle root">
+              По&nbsp;мотивам&nbsp;учебной&nbsp;темы о&nbsp;Транссибе
+              &mdash;&nbsp;путешествие от&nbsp;столицы&nbsp;до&nbsp;Байкала
+              на&nbsp;электричках.
+            </p>
           </a>
         </section>
       </main>
